@@ -5,5 +5,7 @@ default_sorting = active_scaffold_config.list.user.default_sorting
 <% columns.each do |column| -%>
   <%= render_column_heading(column, sorting, sorting.next_sorting_of(column, default_sorting.sorts_on?(column))) %>
 <% end -%>
+<% unless search_grouped? -%>
 <th class="actions">
 </th>
+<% end -%>
