@@ -8,6 +8,7 @@
 - remove deprecations from 3.4.x (active_scaffold_includes and using @record in helpers)
 - check create authorized for create on list (config.list.always_show_create)
 - allow to disable inplace_edit for column when update form is enabled
+- add support for aggregated lists to field_search (config.field_search.group_options)
 - fix select of existing record for nested subform
 - fix apply constraints to parent (fix update columns on subform on embedded scaffold)
 - fix for override form field and subform partials on AS controllers which are parent class for AS controllers, so they are shared by children classes
